
2008-11-04  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9734: User selector in Web>Access doesn't work (thanks to Andreas Kundoch)
	* Fixed bug #9717: t3lib_parsehtml_proc removes valid attributes of SPAN tags

2008-11-01  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8715: non-admins can not import pages from their own directory (thanks to Johannes Pieper)

2008-11-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9632: Multiple fileuploads into folders with special characters (umlauts) not possible (thanks to Marcus Krause)

2008-10-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9571: Additional condition required to check SSL status in class.t3lib_div.php (thanks to Christian Kuhn)
	* Fixed bug #9659: TCEmain wrongly tests required input-type fields (thanks to Francois Suter)

2008-10-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9655: Call to t3lib_div::devLog() without key in index_ts.php (thanks to Francois Suter)
	* Fixed bug #9623: Flexform sections are not working anymore since script.aculo.us is not loaded
	* Fixed bug #9664: EM fails on retrieving files of uppercase extension keys (thanks to Marcus Krause)
	* Fixed bug #9665: t3lib_BEfunc has a lot of hanging SQL record sets

2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #5019: htmlARea RTE hangs while editing link in Firefox
	* Updated htmlArea RTE version to 1.7.7 for TYPO3 4.2.3
	* Fixed bug #9613: RTE uses JScodeLibArray to insert CSS

2008-10-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9553: Form validation script jsfunc.validateform.js sometimes fails in IE (thanks to Vladimir Podkovanov)
	* Fixed bug #9608: Frontend Editing does not work anymore

2008-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual

2008-10-19  Michael Stucki  <michael@typo3.org>

	* Fixed bug #9535: Folder icons in filelist file tree don't get skinned anymore (patch by Francois Suter)